# devops

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .safety_final_debug.json  .safety_final_debug_utf8.json  .safety_report.json  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW_REPORT.md  COMPLIANCE_ANALYTICS_GUIDE.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DATA_GOVERNANCE.md  DEPENDENCY_CHECK_COMPLETE.md  DEPENDENCY_CHECK_PERSISTENT_STORAGE_GUIDE.md  DEPLOYMENT.md  Dockerfile  FINANCE_ANALYTICS_GUIDE.md  METRIC_THRESHOLDS_GUIDE.md  Makefile  OWASP_DEPENDENCY_CHECK_INTEGRATION.md  PMO_ANALYTICS_PLAN.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY_AND_MANUAL.md  README.md  REQUIREMENTS_SPECIFICATION.md  REQUIREMENTS_SPECIFICATION_V3.md  TEAM_ANALYTICS_PLAN.md  TEST_STRATEGY.md  Technical_Architecture.md  USER_GUIDE.md  Updated_Data_Dictionary.md  check_audit_columns.py  check_audit_table.py  check_auth.py  (+45 more)
.agent/workflows/: bug-triage.md  code-review.md  deploy.md  doc-update.md  lint.md  merge.md  plugin-init.md  rollback.md  session-handover.md  spike.md  task-kickoff.md
.gitlab/issue_templates/: Bug.md  Requirement.md  TestCase.md
.gitlab/merge_request_templates/: Default.md
.streamlit/: config.toml
archived/docs/: P1_IMPLEMENTATION_REPORT.md  P2_IMPLEMENTATION_REPORT.md  基于GITLAB社区版二开测试管理模块V2.docx  基于GITLAB社区版二开测试管理模块V2.md
archived/scripts/: clean_null_bytes.py  extract_docx.py  fix_data_dict_encoding.py  generate_data_dictionary_simple.py  read_docx.py  simulate_plugin_p5_isolation.py  test_cross_dept_visibility.py  test_p2_mock.py  test_p2_notification.py  verify_data_integrity.py  verify_fixes.py  verify_imports.py  verify_jenkins_plugin.py  verify_logic.py  verify_p2_fixes.py  verify_p4_p5_integration.py
archived/test_hub_docs/: BIDIRECTIONAL_SYNC_COMPLETION.md  IDENTITY_MAPPING_PLAN.md  REGISTRATION_SYSTEM_PLAN.md  SERVICE_DESK_API.md  SERVICE_DESK_BIDIRECTIONAL_SYNC.md  SERVICE_DESK_COMPLETION_REPORT.md  SERVICE_DESK_FIELD_MAPPING.md  SERVICE_DESK_FINAL_SUMMARY.md  SERVICE_DESK_LOGIN_FINAL_REPORT.md  SERVICE_DESK_SECURITY.md  SERVICE_DESK_TEST_GUIDE.md  WEBHOOK_SETUP_GUIDE.md
archived/test_hub_scripts/: test_bidirectional_sync.py  test_identity_mapping.py  test_service_desk.py  verify_notification.py  verify_webhook.py
archived/tests/: extract_docx.py
dagster_repo/: __init__.py  resources.py
dagster_repo/assets/: core.py  dbt.py  gitlab.py  quality.py  reports.py
dashboard/: Home.py  __init__.py  utils.py
dashboard/common/: db.py  pulse_widget.py
dashboard/pages/: 0_Gitprime.py  0_Value_Leaderboard.py  10_Metrics_Guard.py  10_Unified_Activities.py  11_Unified_Activities.py  11_Work_Items.py  12_Entity_Alignment.py  12_Work_Items.py  13_Delivery_Costs.py  13_Entity_Alignment.py  14_Delivery_Costs.py  14_Metadata_Governance.py  15_Code_Hotspots.py  15_Metadata_Governance.py  15_Michael_Feathers_Code_Hotspots.py  16_Michael_Feathers_Code_Hotspots.py  16_SPACE_Framework.py  17_SPACE_Framework.py  17_Value_Stream.py  18_Value_Stream.py  19_Strategic_Executive_Cockpit.py  1_DORA_Metrics.py  (+20 more)
datahub/: Dockerfile  recipe_dbt.yml  recipe_postgres.yml  requirements.txt
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
devops_collector/: Dockerfile  __init__.py  alembic.ini  config.ini  config.ini.example  config.py  docker-compose.yml  mq.py  requirements.txt  scheduler.py  worker.py
devops_portal/: __init__.py  dependencies.py  events.py  main.py  schemas.py  schemas_pulse.py  state.py
docs/: CHANGELOG.md  CODE_QUALITY_REPORT.md  DATA_VERIFICATION_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Devops效能平台需求规格说明书V2.0.docx  ENGINEERING_STANDARDIZATION_REPORT.md  GOOGLE_STYLE_COMPLIANCE_REPORT.md  KNOWLEDGE_TRANSFER_GUIDE.md  P1_IMPLEMENTATION_REPORT.md  P2_IMPLEMENTATION_PLAN.md  P2_IMPLEMENTATION_REPORT.md  PROJECT_MAP.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY_AND_MANUAL.md  README.md  REQUIREMENTS_SPECIFICATION.md  SECURITY.md  architecture-alignment.md  employees.csv  feat_adm_okr_export_plan.md  gitlab-user.csv  knowledge_harvest_protocol.md  netxs.md  zentao-user.csv  基于GITLAB社区版二开测试管理模块V2.md  需求评审流与权限规范指引.md
scripts/: add_user_department_fields.py  alter_jsonb.py  analyze_nexus_lifecycle.py  apply_google_docstrings.py  check_actual_admin.py  check_admin_roles.py  check_admin_roles_local.py  check_dashboard_sql.py  check_data_dict_freshness.py  check_db_data.py  check_depts.py  check_identity_alignment.py  check_imports.py  check_issue_labels.py  check_issue_resolution.py  check_null_bytes.py  check_zt_structure.py  clean_null_bytes.py  clean_null_bytes_fix.py  cleanup_stale_data.py  create_gitlab_labels.py  debug_login.py  debug_zentao_conn.py  dependency_check.py  diag_db.py  diag_mq.py  diag_zentao.py  executive_audit_report.py  export_zentao_data.py  extract_docx.py  fetch_api_doc.py  fix_csv_encoding.py  fix_data_dict_encoding.py  fix_zentao_csv.py  fix_zentao_links.py  gatekeeper.py  generate_alignment_report.py  generate_data_dictionary.py  generate_project_map.py  get_zt_token.py  (+61 more)
test_hub/: REGISTRATION_SYSTEM_FINAL_REPORT.md  SERVICE_DESK_ACCESS_METHODS.md  SERVICE_DESK_COMPLETION_REPORT.md  SERVICE_DESK_FINAL_SUMMARY.md  SERVICE_DESK_LOGIN_COMPLETED.md  SERVICE_DESK_LOGIN_FINAL_REPORT.md  SERVICE_DESK_LOGIN_IMPLEMENTATION.md  SERVICE_DESK_TEST_GUIDE.md  SERVICE_DESK_VS_TEST_HUB.md  WEBHOOK_SETUP_GUIDE.md  main.py  openapi.json  schemas.py  service_desk_users.json  test_identity_mapping.py  verify_notification.py  verify_webhook.py
tests/: extract_docx.py  smoke_test_models.py  test_algorithms.py  test_base_client.py  test_dependency_check_worker.py  test_gitlab_mapping.py  test_gitlab_matcher.py  test_identity_manager.py  test_new_frameworks_logic.py  test_okr_models.py  test_okr_service.py  test_product_model.py  test_project_management_integration.py  test_project_master_unit.py  test_pyairbyte_adapter.py  test_rate_limiter.py  test_registry.py  test_traceability_models.py  test_user_org_governance.py  verify_sqlalchemy_mapping.py
(+605 files in other folders)
