[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-platform"
version = "3.4.0"
description = "DevOps Data Application Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Netxs Team", email = "netxs2000@163.com"}
]
keywords = ["devops", "gitlab", "sonarqube", "jenkins", "dora", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=3.2.0,<5.0.0",
    "pika>=1.3.0,<2.0.0",
    "requests>=2.30.0,<3.0.0",
    "urllib3<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tenacity>=8.0.0,<10.0.0",
    "python-json-logger>=2.0.0,<3.0.0",
    "protobuf<5.0.0",
    "pandas>=2.2.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiofiles>=24.0.0,<26.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "dbt-core>=1.7.0,<2.0.0",
    "dbt-postgres>=1.7.0,<2.0.0",
    "streamlit>=1.40.0,<2.0.0",
    "plotly>=5.24.0,<6.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "great_expectations>=1.10.0,<2.0.0",
    "pypinyin>=0.50.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0.0,<8.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "requests-mock>=1.12.0,<2.0.0",
    "selenium>=4.27.0,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",
    "black>=24.0.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "pylint>=3.3.0,<4.0.0",
    "mypy>=1.15.0,<2.0.0",
    "sphinx>=8.1.0,<9.0.0",
    "sphinx-rtd-theme>=3.0.0,<4.0.0",
]
test = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "requests-mock>=1.12.0,<2.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/netxs2000/devops"
Documentation = "https://github.com/netxs2000/devops/README.md"
Repository = "https://github.com/netxs2000/devops"
Issues = "https://github.com/netxs2000/devops/projects"

[project.scripts]
devops-collector = "devops_collector.cli:main"

[tool.setuptools]
packages = ["devops_collector"]

[tool.setuptools.package-data]
devops_collector = ["sql/*.sql"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=devops_collector --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["devops_collector"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
